# wsei-aplikacje-backendowe

./: .gitignore
lab1/: file.txt
lab1/src/: ex1.java  ex2.java  ex3.java  ex5.java  ex6.java  ex7.java  ex8.java  extra1.java  extra2.java  extra3.java
lab3/demo/: curl.txt  fetch.txt  pom.xml  users.txt
projekt/: README.md
projekt/news-scraper-api/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  scrapy.cfg  tox.ini
projekt/news-scraper-api/news_scraper_api/: app.py  celery_config.py  config.py  gunicorn_config.py
projekt/news-scraper-api/news_scraper_api/core/: parsers.py  tasks.py  utils.py
projekt/news-scraper-api/news_scraper_api/models/: article.py
projekt/news-scraper-api/news_scraper_api/resources/: news.py
projekt/news-scraper-api/news_scraper_api/tests/: conftest.py  mock_data.py  test_api.py
projekt/news-scraper-api/scraper/: items.py  loaders.py  pipelines.py  settings.py
projekt/news-scraper-api/scraper/spiders/: bbc_spider.py  cnn_spider.py  foxnews_spider.py  newyorktimes_spider.py  theeconomist_spider.py  thewashingtonpost_spider.py  wallstreetjournal_spider.py
projekt/newsscraper-auth/: Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
projekt/newsscraper-auth/app/: main.py  schemas.py  supertokens_config.py  utils.py
projekt/newsscraper-frontend/: Dockerfile  Dockerfile.dev  README.md  example.env  index.html  package.json  tailwind.config.js  vite.config.js
projekt/newsscraper-frontend/src/: App.jsx  index.css  main.jsx
(+27 files in other folders)
