[tool.poetry]
name = "newsscraper-auth"
version = "0.1.0"
description = ""
authors = ["bartosz121 <bmagiera121@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
supertokens-python = "^0.7.2"
python-dotenv = "^0.20.0"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
